# BackendLivrosEbacPython

./: Dockerfile  celery_app.py  conftest.py  deployment.yaml  docker-compose.yml  livros.db  main.py  pyproject.toml  service.yaml  tasks.py  test.db
.github/workflows/: python-app.yml
logstash/: logstash.conf
tests/: test_auth.py  test_database.py  test_hello_world.py  test_soma.py  test_tasks_celery.py  test_tasks_endpoint.py
